unpackaged/main/default/objects/AnonymizationField__mdt/AnonymizationField__mdt.object-meta.xml
<CustomObject>
    <label>AnonymizationField</label>
    <pluralLabel>AnonymizationFields</pluralLabel>
</CustomObject>