unpackaged/main/default/objects/AnonymizationField__mdt/fields/AnonymizationFieldType__c.field-meta.xml
<CustomField>
    <fullName>AnonymizationFieldType__c</fullName>
    <label>AnonymizationFieldType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>