unpackaged/main/default/objects/AnonymizationField__mdt/fields/AnonymizationObject__c.field-meta.xml
<CustomField>
    <fullName>AnonymizationObject__c</fullName>
    <label>AnonymizationObject</label>
    <referenceTo>AnonymizationObject__mdt</referenceTo>
    <relationshipLabel>AnonymizationFields</relationshipLabel>
    <relationshipName>AnonymizationFields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>