unpackaged/main/default/objects/AnonymizationField__mdt/fields/isCustomField__c.field-meta.xml
<CustomField>
    <fullName>isCustomField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomField</label>
    <type>Checkbox</type>
</CustomField>