unpackaged/main/default/objects/AnonymizationField__mdt/fields/IsPersonAccountField__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccountField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Person Account Field</label>
    <type>Checkbox</type>
</CustomField>