unpackaged/main/default/objects/AnonymizationField__mdt/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>